--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <body><!-- the body element is where everything we will see on the page will go -->
 
     <!-- our soon to be beautiful rainbow! -->
-    <div class = ".red"> <!-- the grandest grandparent div -->
-      <div class = ".red">
-        <div class = ".red">
-          <div class = ".red">
-            <div class = ".red">
-              <div class = ".red">
-                <div class = ".red"></div> <!-- the grandest child div -->
+    <div class = "red"> <!-- the grandest grandparent div -->
+      <div class = "red">
+        <div class = "red">
+          <div class = "red">
+            <div class = "red">
+              <div class = "red">
+                <div class = "red"></div> <!-- the grandest child div -->
               </div>
             </div>
           </div>
