Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
     <!-- our soon to be beautiful rainbow! -->
     <div class = "red"> <!-- the grandest grandparent div -->
-      <div class = "red">
-        <div class = "red">
-          <div class = "red">
-            <div class = "red">
-              <div class = "red">
-                <div class = "red"></div> <!-- the grandest child div -->
+      <div class = "yellow">
+        <div class = "orange">
+          <div class = "blue">
+            <div class = "indigo">
+              <div class = "violet">
+                <div class = "green"></div> <!-- the grandest child div -->
               </div>
             </div>
           </div>
